added initial MPI functionality to communicate dimensionality of data.

--- a/research/SL/trunk/Newell/examples/cell/Makefile
+++ b/research/SL/trunk/Newell/examples/cell/Makefile
@@ -1,20 +1,31 @@
-DBG	= -g
+DBG	= -g -DDEBUG
 SDK 	= /localtmp/den4gr/NVIDIA_GPU_Computing_SDK
 #EMU	= -deviceemu
+CUDA	= /usr/local/cuda
 F	= --compiler-options -fno-strict-aliasing
-CFLAGS	= $(EMU) $(F) -arch=sm_20 -I$(SDK)/C/common/inc
-LIBS	= -lcudart -L$(SDK)/C/common/lib
+INCLUDES= -I$(SDK)/C/common/inc -I$(CUDA)/include
+CFLAGS	= $(INCLUDES) $(DBG)
+NVFLAGS	= $(CFLAGS) $(EMU) $(F) -arch=sm_20 
+LIBS	= -lcudart -L$(SDK)/C/common/lib -L$(CUDA)/lib64
 
 all:		cell
-cell:		cell-main.o cell.o
-		nvcc -o $@ cell-main.o cell.o $(LDFLAGS) $(LIBS)
+cell:		cell-main.o cell.o Decomposition.o Node.o SubDomain3D.o
+		mpic++ -o $@ $^ $(LDFLAGS) $(LIBS)
 
 cell-main.o:	cell-main.cpp
-		nvcc $(CFLAGS) -c $<
+		mpic++ $(CFLAGS) -c $<
 
-cell.o:		cell.cu Model.cu Model.h
-		nvcc $(CFLAGS) -c $<
+cell.o:		cell.cu ../Model.cu ../Model.h
+		nvcc $(NVFLAGS) -c $<
 
+Decomposition.o:	Decomposition.cpp Decomposition.h Node.h
+		mpic++ $(CFLAGS) -c $< 
+
+Node.o:		Node.cpp Node.h SubDomain3D.h
+		mpic++ $(CFLAGS) -c $< 
+
+SubDomain3D.o:	SubDomain3D.cpp SubDomain3D.h 
+		mpic++ $(CFLAGS) -c $< 
 clean:
 		rm -f cell *.o *.linkinfo *~
 
