added mpi machinefile and debugging mpi probs in main.

--- a/research/SL/trunk/Newell/examples/cell/Makefile
+++ b/research/SL/trunk/Newell/examples/cell/Makefile
@@ -4,13 +4,14 @@ SDK 	= /localtmp/den4gr/NVIDIA_GPU_Computing_SDK
 CUDA	= /usr/local/cuda
 F	= --compiler-options -fno-strict-aliasing
 INCLUDES= -I$(SDK)/C/common/inc -I$(CUDA)/include
+MPIFLAGS= -rpath=/af21/den4gr/openmpi-install/lib
 CFLAGS	= $(INCLUDES) $(DBG)
 NVFLAGS	= $(CFLAGS) $(EMU) $(F) -arch=sm_20 
 LIBS	= -lcudart -L$(SDK)/C/common/lib -L$(CUDA)/lib64
 
 all:		cell
 cell:		cell-main.o cell.o Decomposition.o Node.o SubDomain3D.o
-		mpic++ -o $@ $^ $(LDFLAGS) $(LIBS)
+		mpic++ -o $@ $^ $(LDFLAGS) $(MPIFLAGS) $(LIBS)
 
 cell-main.o:	cell-main.cpp
 		mpic++ $(CFLAGS) -c $<
