Updated Image Processing project from Spring 2012. Fixed race condition in comm.cpp where an asynchronous send was using a local variable that went out of scope before send completed, which resulted in garbage being sent for the block index in send segment.

--- a/courses/image_processing/project/Makefile
+++ b/courses/image_processing/project/Makefile
@@ -1,12 +1,13 @@
 
 CC=gcc
 NVCC=nvcc
+NVFLAGS=-arch sm_13
 LIBS = -lnpp -ljpeg
 jpeg_sample:jpeg_sample.o
-	$(NVCC) -g -o jpeg_sample jpeg_sample.o $(LIBS)
+	$(NVCC) $(NVFLAGS) -g -o jpeg_sample jpeg_sample.o $(LIBS)
 	
 jpeg_sample.o: jpeg_sample.cu
-	$(NVCC) -c -g jpeg_sample.cu -o jpeg_sample.o 
+	$(NVCC) $(NVFLAGS) -c -g jpeg_sample.cu -o jpeg_sample.o 
 
 clean:
 	rm -rf *.o jpeg_sample
