more cleanup. horrible practice I know.

--- a/research/SL/trunk/Newell/examples/cell/Makefile
+++ b/research/SL/trunk/Newell/examples/cell/Makefile
@@ -1,18 +1,23 @@
-#DBG	= -g
-SDK 	= /af21/den4gr/NVIDIA_GPU_Computing_SDK
+HOME    = /af21/den4gr
+DBG	= -g
+SDK 	= $(HOME)/NVIDIA_GPU_Computing_SDK
 #EMU	= -deviceemu
 #CUDA	= /localtmp/cuda
-CUDA	= /usr/local/cuda
+CUDA	= $(HOME)/cuda
 F	= --compiler-options -fno-strict-aliasing
+METIS	= $(HOME)/metis-5.0.2/
 NVINCLUDES= -I$(SDK)/C/common/inc -I$(CUDA)/include
+INCLUDES = -I$(METIS)/include
 #MPIFLAGS= -rpath=/af21/den4gr/openmpi-install/lib
 WARN    = -Wall -Wextra
-DEFINES = -DDTYPE=int -DSL_MPI_TYPE=MPI_INT
-CFLAGS	= $(WARN) -O2 $(DEFINES)
+DEFINES = -DDTYPE=int -DSL_MPI_TYPE=MPI_INT -DSLAB
+CFLAGS	= $(WARN) $(DEFINES) -O3 -DMPICH_IGNORE_CXX_SEEK
 LDFLAGS = -fopenmp
+CXXLIBS = -L$(METIS)/build/Linux-x86_64/libmetis
 OMPFLAGS = $(CFLAGS) -fopenmp
-NVFLAGS	=  $(EMU) -arch=sm_20 --compiler-options -Wall -O2 $(F) $(DEFINES)
-NVLIBS	= -lcudart -L$(SDK)/C/common/lib -L$(CUDA)/lib64
+NVFLAGS	=  $(EMU) -arch=sm_20 -O3 --compiler-options -Wall  $(F) $(DEFINES)
+NVLIBS	= -lcudart -L$(CUDA)/lib64
+MPICXX = mpicxx
 
 all:		distributedCell ompCell cudaCell
  
@@ -23,7 +28,7 @@ cudaCell:	cell-main-CUDA.o cell.o
 		nvcc $(DBG) -o $@ $^ $(NVFLAGS) $(NVLIBS)
 
 distributedCell:  cell-main.o distributedCell.o cell.o ompCell.o comm.o Decomposition.o Node.o Cluster.o Balancer.o SubDomain.o
-		mpic++ $(DBG) -o $@ $^ $(LDFLAGS) $(NVLIBS)
+		$(MPICXX) $(DBG) -o $@ $^ $(LDFLAGS) $(NVLIBS) $(CXXLIBS)
 
 lint.txt:        ~/cpplint.py cell-main.cpp distributedCell.cpp ompCell.cpp
 		~/cpplint.py cell-main.cpp distributedCell.cpp ompCell.cpp > lint.txt 
@@ -35,10 +40,10 @@ cell-main-CUDA.o:	cell-main-CUDA.cpp
 		g++ $(NVINCLUDES) $(DBG) $(CFLAGS) -c $<
 
 cell-main.o:	cell-main.cpp
-		mpic++ $(INCLUDES) $(DBG) $(CFLAGS) -c $<
+		$(MPICXX) $(INCLUDES) $(DBG) $(CFLAGS) -c $<
 
 distributedCell.o:	distributedCell.cpp
-		mpic++ $(NVINCLUDES) $(DBG) $(CFLAGS) -c $<
+		$(MPICXX) $(NVINCLUDES) $(DBG) $(OMPFLAGS) -c $<
 
 ompCell.o:	ompCell.cpp 
 		g++ $(INCLUDES) $(DBG) $(OMPFLAGS) -c $<
@@ -47,10 +52,10 @@ cell.o:		cell.cu ../Model.cu ../Model.h
 		nvcc $(NVINCLUDES) $(DBG) $(NVFLAGS) -c $<
 
 comm.o:	        ../comm.cpp ../comm.h
-		mpic++ $(NVINCLUDES) $(DBG) $(CFLAGS) -c $<
+		$(MPICXX) $(NVINCLUDES) $(DBG) $(CFLAGS) -c $<
 
 Decomposition.o:	../Decomposition.cpp ../Decomposition.h ../Node.h
-		mpic++ $(INCLUDES) $(DBG) $(CFLAGS) -c $<
+		$(MPICXX) $(INCLUDES) $(DBG) $(CFLAGS) -c $<
 
 Balancer.o:	../Balancer.cpp ../Balancer.h ../Cluster.h ../Decomposition.h
 		g++ $(INCLUDES) $(DBG) $(CFLAGS) -c $<
