--- a/research/SL/trunk/Newell/examples/tests/Makefile
+++ b/research/SL/trunk/Newell/examples/tests/Makefile
@@ -8,32 +8,32 @@ INCLUDES= -I$(SDK)/C/common/inc -I$(CUDA)/include
 DEFINES = -DSL_MPI_TYPE=MPI_INT -DDTYPE=int
 CFLAGS	= $(DBG) -Wall -fopenmp $(DEFINES)
 LIBS	= -lcudart -L$(SDK)/C/common/lib -L$(CUDA)/lib64 
-
+MPICXX = mpicxx
 all:		comm2DTest comm3DTest profilerTest
 
 comm2DTest:	comm2DTest.o comm.o Cluster.o Node.o SubDomain.o
-		mpic++ -o $@ $^ $(LDFLAGS) $(LIBS)
+		$(MPICXX) -o $@ $^ $(LDFLAGS) $(LIBS)
 
 comm3DTest:	comm3DTest.o comm.o Cluster.o Node.o SubDomain.o
-		mpic++ -o $@ $^ $(DBG) $(LDFLAGS) $(LIBS)
+		$(MPICXX) -o $@ $^ $(DBG) $(LDFLAGS) $(LIBS)
 
 profilerTest:	profilerTest.o Profiler.o
-		mpic++ -o $@ $^ $(DBG) $(LDFLAGS) $(LIBS)
+		$(MPICXX) -o $@ $^ $(DBG) $(LDFLAGS) $(LIBS)
 
 comm2DTest.o:	comm2DTest.cpp ../comm.h
-		mpic++ $(INCLUDES) $(CFLAGS) -c $<
+		$(MPICXX) $(INCLUDES) $(CFLAGS) -c $<
 
 comm3DTest.o:	comm3DTest.cpp ../comm.h
-		mpic++ $(INCLUDES) $(CFLAGS) -c $<
+		$(MPICXX) $(INCLUDES) $(CFLAGS) -c $<
 
 profilerTest.o:	profilerTest.cpp ../Profiler.h
-		mpic++ $(INCLUDES) $(CFLAGS) -c $<
+		$(MPICXX) $(INCLUDES) $(CFLAGS) -c $<
 
 comm.o:	        ../comm.cpp ../comm.h
-		mpic++ $(INCLUDES) $(CFLAGS) -c $< 
+		$(MPICXX) $(INCLUDES) $(CFLAGS) -c $< 
 
 Profiler.o:	../Profiler.cpp ../Profiler.h 
-		mpic++ $(INCLUDES) $(CFLAGS) -c $< 
+		$(MPICXX) $(INCLUDES) $(CFLAGS) -c $< 
 
 Cluster.o:	../Cluster.cpp ../Cluster.h 
 		mpic++ $(INCLUDES) $(CFLAGS) -c $< 
