--- a/research/VMR/src/OpenCVTest/OpenCVTest/OpenCVTest.vcxproj
+++ b/research/VMR/src/OpenCVTest/OpenCVTest/OpenCVTest.vcxproj
@@ -136,7 +136,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <WarningLevel>Level3</WarningLevel>
+      <WarningLevel>EnableAllWarnings</WarningLevel>
       <PrecompiledHeader>
       </PrecompiledHeader>
       <Optimization>Full</Optimization>
